--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   <body>
       <div id="header">
         <nav>
-            <li class="instagram"><a href="http://instagram.com/mkngjoy"><i class='fa fa-instagram'></i></a></li>
+            <li class="instagram"><a href="http://instagram.com/mkngjoy"><i class="fab fa-instagram-square"></i></a></li>
           {% if site.show_downloads %}
             <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
             <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
