--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,6 +19,7 @@
       border: none;
       background: none;
       border-radius: 0;
+      box-shadow: none;
       font-size: 32px;
       line-height: 1em;
       padding: 0 8px;
