--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,16 +36,15 @@
         </div>
 
         {{ content }}
-
-        
-        <div id="footer">
-         <hr>
-            <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
-            <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span
-        </div>
       </section>
 
-    </div>
+      <div id="footer">
+        <hr>
+        <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
+        <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span
+      </div>
+          
+    </div><!-- // end wrapper -->
     
 
     {% if site.google_analytics %}
